@@ -1,5 +1,9 @@
 Current Version: @@VERSION@@
 
+ctags-5.3.2 (Mon Sep 16 2002)
+* Improved ability for tagsOpen() in readtags library to report failure to
+  open tag file, adding new fields to tagFileInfo structure.
+
 ctags-5.3.1 (Thu Sep 12 2002)
 * Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
   tagFileInfo structure of readtags library to "sort".
